--- a/FunyCamNF.csproj
+++ b/FunyCamNF.csproj
@@ -158,7 +158,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="filters\ConcaveFilter.cs" />
+    <Compile Include="filters\ConvexFilter.cs" />
     <Compile Include="filters\DynamicRotateFilter.cs" />
+    <Compile Include="filters\TransX.cs" />
     <Compile Include="frame\Frame.cs" />
     <Compile Include="frame\Pixel.cs" />
     <Compile Include="pages\main\MainPage.xaml.cs">
