--- a/packages.config
+++ b/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.19" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
@@ -31,4 +32,5 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="Xabe.FFmpeg" version="5.0.2" targetFramework="net472" />
 </packages>
